[gd_scene load_steps=10 format=3 uid="uid://dnnk3oq0uhsk3"]

[ext_resource type="Script" path="res://editor/_table.gd" id="1_2ii0b"]
[ext_resource type="Script" path="res://editor/fighter_table.gd" id="1_nkua0"]
[ext_resource type="Script" path="res://editor/fighter_table_row.gd" id="2_1hdbk"]
[ext_resource type="StyleBox" uid="uid://eelwpy4cx451" path="res://style/background.tres" id="2_xvtes"]
[ext_resource type="Script" path="res://editor/team_table.gd" id="3_31utt"]
[ext_resource type="Script" path="res://editor/team_table_row.gd" id="4_trhd7"]
[ext_resource type="Script" path="res://editor/sched_table.gd" id="6_j6joy"]
[ext_resource type="Script" path="res://editor/sched_table_team.gd" id="7_nee7c"]
[ext_resource type="Script" path="res://editor/sched_table_game.gd" id="8_8uuyj"]

[node name="table" type="Control" node_paths=PackedStringArray("tabContainer", "fighterTable", "teamTable")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2ii0b")
tabContainer = NodePath("background/VBoxContainer/entity_edit")
fighterTable = NodePath("background/VBoxContainer/entity_edit/fighter_table")
teamTable = NodePath("background/VBoxContainer/entity_edit/team_table")

[node name="background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_xvtes")

[node name="VBoxContainer" type="VBoxContainer" parent="background"]
custom_minimum_size = Vector2(1150, 650)
layout_mode = 2

[node name="entity_edit" type="TabContainer" parent="background/VBoxContainer"]
custom_minimum_size = Vector2(0, 640)
layout_mode = 2
size_flags_vertical = 3
current_tab = 2

[node name="fighter_table" type="VBoxContainer" parent="background/VBoxContainer/entity_edit" node_paths=PackedStringArray("table", "row", "message", "softSave")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nkua0")
table = NodePath("scroll box/table vbox")
row = NodePath("scroll box/table vbox/row")
message = NodePath("top row/message")
softSave = NodePath("top row/soft_save")
metadata/_tab_index = 0

[node name="HSeparator" type="HSeparator" parent="background/VBoxContainer/entity_edit/fighter_table"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="top row" type="HBoxContainer" parent="background/VBoxContainer/entity_edit/fighter_table"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="background/VBoxContainer/entity_edit/fighter_table/top row"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="add" type="Button" parent="background/VBoxContainer/entity_edit/fighter_table/top row"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
size_flags_horizontal = 0
text = "+"

[node name="VSeparator2" type="VSeparator" parent="background/VBoxContainer/entity_edit/fighter_table/top row"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="save" type="Button" parent="background/VBoxContainer/entity_edit/fighter_table/top row"]
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
size_flags_horizontal = 0
text = "Save"

[node name="soft_save" type="CheckBox" parent="background/VBoxContainer/entity_edit/fighter_table/top row"]
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
size_flags_horizontal = 0
button_pressed = true
text = "soft save"

[node name="VSeparator3" type="VSeparator" parent="background/VBoxContainer/entity_edit/fighter_table/top row"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="message" type="Label" parent="background/VBoxContainer/entity_edit/fighter_table/top row"]
layout_mode = 2
text = "Saved"

[node name="HSeparator2" type="HSeparator" parent="background/VBoxContainer/entity_edit/fighter_table"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="scroll box" type="ScrollContainer" parent="background/VBoxContainer/entity_edit/fighter_table"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="table vbox" type="VBoxContainer" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box"]
layout_mode = 2
size_flags_vertical = 3

[node name="row" type="HBoxContainer" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox" node_paths=PackedStringArray("id", "f_name", "types", "base", "strType", "strVal", "wkType", "wkVal", "team", "startSeason")]
layout_mode = 2
script = ExtResource("2_1hdbk")
id = NodePath("id")
f_name = NodePath("name")
types = NodePath("types")
base = NodePath("base")
strType = NodePath("strType")
strVal = NodePath("strVal")
wkType = NodePath("wkType")
wkVal = NodePath("wkVal")
team = NodePath("team")
startSeason = NodePath("start season")

[node name="VSeparator5" type="VSeparator" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="id" type="LineEdit" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(15, 20)
layout_mode = 2
placeholder_text = "id"
editable = false

[node name="VSeparator" type="VSeparator" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="name" type="LineEdit" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(225, 20)
layout_mode = 2
placeholder_text = "name"
select_all_on_focus = true

[node name="types" type="LineEdit" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
placeholder_text = "types"
max_length = 5
select_all_on_focus = true

[node name="base" type="SpinBox" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(75, 20)
layout_mode = 2
min_value = 1000.0
max_value = 5000.0
value = 1000.0
rounded = true
alignment = 2
custom_arrow_step = 10.0
select_all_on_focus = true

[node name="VSeparator2" type="VSeparator" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="strType" type="OptionButton" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(40, 20)
layout_mode = 2

[node name="strVal" type="SpinBox" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(75, 20)
layout_mode = 2
min_value = 10.0
max_value = 300.0
value = 10.0
rounded = true
alignment = 2
prefix = "+"
custom_arrow_step = 10.0
select_all_on_focus = true

[node name="VSeparator4" type="VSeparator" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="wkType" type="OptionButton" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(40, 20)
layout_mode = 2

[node name="wkVal" type="SpinBox" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(75, 20)
layout_mode = 2
min_value = 10.0
max_value = 300.0
value = 10.0
rounded = true
alignment = 2
prefix = "-"
custom_arrow_step = 10.0
select_all_on_focus = true

[node name="VSeparator3" type="VSeparator" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="team" type="OptionButton" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(175, 20)
layout_mode = 2

[node name="start season" type="SpinBox" parent="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(75, 20)
layout_mode = 2
min_value = 30.0
value = 30.0
rounded = true
allow_lesser = true
alignment = 2
select_all_on_focus = true

[node name="team_table" type="VBoxContainer" parent="background/VBoxContainer/entity_edit" node_paths=PackedStringArray("table", "row", "message")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_31utt")
table = NodePath("scroll box/table vbox")
row = NodePath("scroll box/table vbox/row")
message = NodePath("top row/message")
metadata/_tab_index = 1

[node name="HSeparator" type="HSeparator" parent="background/VBoxContainer/entity_edit/team_table"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="top row" type="HBoxContainer" parent="background/VBoxContainer/entity_edit/team_table"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="background/VBoxContainer/entity_edit/team_table/top row"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="add" type="Button" parent="background/VBoxContainer/entity_edit/team_table/top row"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
size_flags_horizontal = 0
text = "+"

[node name="VSeparator2" type="VSeparator" parent="background/VBoxContainer/entity_edit/team_table/top row"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="save" type="Button" parent="background/VBoxContainer/entity_edit/team_table/top row"]
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
size_flags_horizontal = 0
text = "Save"

[node name="VSeparator3" type="VSeparator" parent="background/VBoxContainer/entity_edit/team_table/top row"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="message" type="Label" parent="background/VBoxContainer/entity_edit/team_table/top row"]
layout_mode = 2
text = "Saved"

[node name="HSeparator2" type="HSeparator" parent="background/VBoxContainer/entity_edit/team_table"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="scroll box" type="ScrollContainer" parent="background/VBoxContainer/entity_edit/team_table"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="table vbox" type="VBoxContainer" parent="background/VBoxContainer/entity_edit/team_table/scroll box"]
layout_mode = 2
size_flags_vertical = 3

[node name="row" type="HBoxContainer" parent="background/VBoxContainer/entity_edit/team_table/scroll box/table vbox" node_paths=PackedStringArray("id", "t_name", "color")]
layout_mode = 2
script = ExtResource("4_trhd7")
id = NodePath("id")
t_name = NodePath("name")
color = NodePath("color")

[node name="VSeparator5" type="VSeparator" parent="background/VBoxContainer/entity_edit/team_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="id" type="LineEdit" parent="background/VBoxContainer/entity_edit/team_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(15, 20)
layout_mode = 2
placeholder_text = "id"
editable = false

[node name="VSeparator" type="VSeparator" parent="background/VBoxContainer/entity_edit/team_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="name" type="LineEdit" parent="background/VBoxContainer/entity_edit/team_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(275, 20)
layout_mode = 2
placeholder_text = "name"
select_all_on_focus = true

[node name="VSeparator2" type="VSeparator" parent="background/VBoxContainer/entity_edit/team_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="color" type="ColorPickerButton" parent="background/VBoxContainer/entity_edit/team_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="VSeparator4" type="VSeparator" parent="background/VBoxContainer/entity_edit/team_table/scroll box/table vbox/row"]
custom_minimum_size = Vector2(7, 0)
layout_mode = 2

[node name="sched_table" type="VBoxContainer" parent="background/VBoxContainer/entity_edit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("6_j6joy")
metadata/_tab_index = 2

[node name="HSeparator" type="HSeparator" parent="background/VBoxContainer/entity_edit/sched_table"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="top_row" type="HBoxContainer" parent="background/VBoxContainer/entity_edit/sched_table"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="background/VBoxContainer/entity_edit/sched_table/top_row"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="background/VBoxContainer/entity_edit/sched_table/top_row"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="save" type="Button" parent="background/VBoxContainer/entity_edit/sched_table/top_row"]
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
size_flags_horizontal = 0
text = "Save"

[node name="VSeparator3" type="VSeparator" parent="background/VBoxContainer/entity_edit/sched_table/top_row"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="message" type="Label" parent="background/VBoxContainer/entity_edit/sched_table/top_row"]
layout_mode = 2
text = "Saved"

[node name="HSeparator2" type="HSeparator" parent="background/VBoxContainer/entity_edit/sched_table"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="scroll_box" type="ScrollContainer" parent="background/VBoxContainer/entity_edit/sched_table"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="table_vbox" type="VBoxContainer" parent="background/VBoxContainer/entity_edit/sched_table/scroll_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="table_hbox" type="HBoxContainer" parent="background/VBoxContainer/entity_edit/sched_table/scroll_box/table_vbox"]
layout_mode = 2

[node name="outer_mpane" type="MarginContainer" parent="background/VBoxContainer/entity_edit/sched_table/scroll_box/table_vbox/table_hbox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="team_box" type="ColorRect" parent="background/VBoxContainer/entity_edit/sched_table/scroll_box/table_vbox/table_hbox/outer_mpane"]
custom_minimum_size = Vector2(180, 220)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.588235, 0, 0, 1)
script = ExtResource("7_nee7c")

[node name="inner_mpane" type="MarginContainer" parent="background/VBoxContainer/entity_edit/sched_table/scroll_box/table_vbox/table_hbox/outer_mpane/team_box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="info_vbox" type="VBoxContainer" parent="background/VBoxContainer/entity_edit/sched_table/scroll_box/table_vbox/table_hbox/outer_mpane/team_box/inner_mpane"]
layout_mode = 2
size_flags_horizontal = 3

[node name="name" type="Label" parent="background/VBoxContainer/entity_edit/sched_table/scroll_box/table_vbox/table_hbox/outer_mpane/team_box/inner_mpane/info_vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "team name"
horizontal_alignment = 1

[node name="game" type="OptionButton" parent="background/VBoxContainer/entity_edit/sched_table/scroll_box/table_vbox/table_hbox/outer_mpane/team_box/inner_mpane/info_vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
script = ExtResource("8_8uuyj")

[node name="HSeparator" type="HSeparator" parent="background/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="background/VBoxContainer/entity_edit/fighter_table/top row/add" to="background/VBoxContainer/entity_edit/fighter_table" method="add_empty_row"]
[connection signal="pressed" from="background/VBoxContainer/entity_edit/fighter_table/top row/save" to="background/VBoxContainer/entity_edit/fighter_table" method="save"]
[connection signal="focus_exited" from="background/VBoxContainer/entity_edit/fighter_table/top row/message" to="background/VBoxContainer/entity_edit/fighter_table" method="hideMessage"]
[connection signal="focus_entered" from="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row/team" to="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row" method="openTeamList"]
[connection signal="focus_exited" from="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row/team" to="background/VBoxContainer/entity_edit/fighter_table/scroll box/table vbox/row" method="closeTeamList"]
[connection signal="pressed" from="background/VBoxContainer/entity_edit/team_table/top row/add" to="background/VBoxContainer/entity_edit/team_table" method="add_empty_row"]
[connection signal="pressed" from="background/VBoxContainer/entity_edit/team_table/top row/save" to="background/VBoxContainer/entity_edit/team_table" method="save"]
[connection signal="focus_exited" from="background/VBoxContainer/entity_edit/team_table/top row/message" to="background/VBoxContainer/entity_edit/fighter_table" method="hideMessage"]
[connection signal="pressed" from="background/VBoxContainer/entity_edit/sched_table/top_row/save" to="background/VBoxContainer/entity_edit/sched_table" method="save"]
[connection signal="focus_exited" from="background/VBoxContainer/entity_edit/sched_table/top_row/message" to="background/VBoxContainer/entity_edit/fighter_table" method="hideMessage"]
[connection signal="focus_entered" from="background/VBoxContainer/entity_edit/sched_table/scroll_box/table_vbox/table_hbox/outer_mpane/team_box/inner_mpane/info_vbox/game" to="background/VBoxContainer/entity_edit/sched_table/scroll_box/table_vbox/table_hbox/outer_mpane/team_box/inner_mpane/info_vbox/game" method="openTeamList"]
[connection signal="focus_exited" from="background/VBoxContainer/entity_edit/sched_table/scroll_box/table_vbox/table_hbox/outer_mpane/team_box/inner_mpane/info_vbox/game" to="background/VBoxContainer/entity_edit/sched_table/scroll_box/table_vbox/table_hbox/outer_mpane/team_box/inner_mpane/info_vbox/game" method="closeTeamList"]
[connection signal="item_selected" from="background/VBoxContainer/entity_edit/sched_table/scroll_box/table_vbox/table_hbox/outer_mpane/team_box/inner_mpane/info_vbox/game" to="background/VBoxContainer/entity_edit/sched_table/scroll_box/table_vbox/table_hbox/outer_mpane/team_box/inner_mpane/info_vbox/game" method="signal_oppID"]
